--- a/source/form.html
+++ b/source/form.html
@@ -58,7 +58,7 @@
             <fieldset class="form__comment">
               <legend class="form__legend legend__comment">Комментарий</legend>
               <label>
-                <textarea name="comment" placeholder="Расскажите о всех поводках кота" rows="8"></textarea>
+                <textarea name="comment" placeholder="Расскажите обо всех повадках кота" rows="8"></textarea>
               </label>
             </fieldset>
             <fieldset class="form__additional">
@@ -72,7 +72,7 @@
             </fieldset>
             <div class="form__button-text">
             <input class="form__button" type="submit" value="Отправить заявку">
-            <p class="form__text">* - обязательные поля формы</p>
+            <p class="form__text">* - Обязательные поля</p>
             </div>
           </form>
           </div>
