--- a/source/catalog.html
+++ b/source/catalog.html
@@ -35,7 +35,13 @@
           <ul class="catalog-list">
             <li class="catalog-list__item item-catalog">
               <div class="item-catalog__info">
-                <a><div class="item-catalog__img img__ch-sm"></div></a>
+                <a>
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="../img/chicken-small-desktop@1x.png 1x, ../img/chicken-small-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="../img/chicken-small-tablet@1x.png 1x, ../img/chicken-small-tablet@2x.png 2x">
+                    <img class="item-catalog__img" src="../img/chicken-small-mobile@1x.jpg" srcset="../img/chicken-small-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом курицы 500 грамм 700 рублей">
+                  </picture>
+                </a>
                 <div class="item-catalog__text">
                 <a class="item-catalog__link" href="#">
                   <h3>Cat Energy Pro 500г</h3>
@@ -60,7 +66,13 @@
             </li>
             <li class="catalog-list__item item-catalog">
               <div class="item-catalog__info">
-                <a><div class="item-catalog__img img__ch-big"></div></a>
+                <a>
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="../img/chicken-big-desktop@1x.png 1x, ../img/chicken-big-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="../img/chicken-big-tablet@1x.png 1x, ../img/chicken-big-tablet@2x.png 2x">
+                    <img class="item-catalog__img" src="../img/chicken-big-mobile@1x.jpg" srcset="../img/chicken-big-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом курицы 1000 грамм 1000 рублей">
+                  </picture>
+                </a>
                 <div class="item-catalog__text">
                 <a class="item-catalog__link" href="#">
                   <h3>Cat Energy Pro 1000г</h3>
@@ -85,7 +97,13 @@
             </li>
             <li class="catalog-list__item item-catalog">
               <div class="item-catalog__info">
-                <a><div class="item-catalog__img img__fish-sm"></div></a>
+                <a>
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="../img/fish-small-desktop@1x.png 1x, ../img/fish-small-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="../img/fish-small-tablet@1x.png 1x, ../img/fish-small-tablet@2x.png 2x">
+                    <img class="item-catalog__img" src="../img/fish-small-mobile@1x.jpg" srcset="../img/fish-small-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом рыбы 500 грамм 700 рублей">
+                  </picture>
+                </a>
                 <div class="item-catalog__text">
                 <a class="item-catalog__link" href="#">
                   <h3>Cat Energy Pro 500г</h3>
@@ -110,7 +128,13 @@
             </li>
             <li class="catalog-list__item item-catalog">
               <div class="item-catalog__info">
-                <a><div class="item-catalog__img img__fish-big"></div></a>
+                <a>
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="../img/fish-big-desktop@1x.png 1x, ../img/fish-big-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="../img/fish-big-tablet@1x.png 1x, ../img/fish-big-tablet@2x.png 2x">
+                    <img class="item-catalog__img" src="../img/fish-big-mobile@1x.jpg" srcset="../img/fish-big-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом рыбы 1000 грамм 1000 рублей">
+                  </picture>
+                </a>
                 <div class="item-catalog__text">
                 <a class="item-catalog__link" href="#">
                   <h3>Cat Energy Pro 1000г</h3>
@@ -135,7 +159,13 @@
             </li>
             <li class="catalog-list__item item-catalog">
               <div class="item-catalog__info">
-                <a><div class="item-catalog__img img__bw-sm"></div></a>
+                <a>
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="../img/buckwheat-small-desktop@1x.png 1x, ../img/buckwheat-small-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="../img/buckwheat-small-tablet@1x.png 1x, ../img/buckwheat-small-tablet@2x.png 2x">
+                    <img class="item-catalog__img" src="../img/buckwheat-small-mobile@1x.jpg" srcset="../img/buckwheat-small-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом гречки 500 грамм 400 рублей">
+                  </picture>
+                </a>
                 <div class="item-catalog__text">
                 <a class="item-catalog__link" href="#">
                   <h3>Cat Energy Slim 500г</h3>
@@ -160,7 +190,13 @@
             </li>
             <li class="catalog-list__item item-catalog">
               <div class="item-catalog__info">
-                <a><div class="item-catalog__img img__bw-big"></div></a>
+                <a>
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="../img/buckwheat-big-desktop@1x.png 1x, ../img/buckwheat-big-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="../img/buckwheat-big-tablet@1x.png 1x, ../img/buckwheat-big-tablet@2x.png 2x">
+                    <img class="item-catalog__img" src="../img/buckwheat-big-mobile@1x.jpg" srcset="../img/buckwheat-big-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом гречки 1000 грамм 700 рублей">
+                  </picture>
+                </a>
                 <div class="item-catalog__text">
                 <a class="item-catalog__link" href="#">
                   <h3>Cat Energy Slim 1000г</h3>
@@ -185,7 +221,13 @@
             </li>
             <li class="catalog-list__item item-catalog">
               <div class="item-catalog__info">
-                <a><div class="item-catalog__img img__rice-sm"></div></a>
+                <a>
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="../img/rice-small-desktop@1x.png 1x, ../img/rice-small-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="../img/rice-small-tablet@1x.png 1x, ../img/rice-small-tablet@2x.png 2x">
+                    <img class="item-catalog__img" src="../img/rice-small-mobile@1x.jpg" srcset="../img/rice-small-mobile@2x.jpg 2x" width="140" height="144" alt="Корм со вкусом риса 500 грамм 400 рублей">
+                  </picture>
+                </a>
                 <div class="item-catalog__text">
                 <a class="item-catalog__link" href="#">
                   <h3>Cat Energy Slim 500г</h3>
@@ -265,7 +307,7 @@
                 C11.2,10.7,10.4,7.6,11.7,5.2z M26.5,27.8v13.7H6.4V27.8H26.5z M6.4,53.9v-10h20.2v13.7H10C8,57.6,6.4,55.9,6.4,53.9z M45.5,57.6
                 H28.9V43.9h20.2v10C49.1,55.9,47.5,57.6,45.5,57.6z M49.1,41.5H28.9V27.8h20.2V41.5z M53.1,24.7c0,0.4-0.3,0.7-0.7,0.7h-2
                 c0,0,0,0,0,0s0,0,0,0H27.7c0,0,0,0,0,0s0,0,0,0H5.2c0,0,0,0,0,0s0,0,0,0h-2c-0.4,0-0.7-0.3-0.7-0.7v-9.4c0-0.4,0.3-0.7,0.7-0.7h49.2
-                c0.4,0,0.7,0.3,0.7,0.7V24.7z"/>
+                c0.4,0,0.7,0.3,0.7,0.7V24.7z" fill="#ffffff"/>
               </svg>
             <p class="present__text">Закажите все<br>и получите чехол для кота в подарок!</p>
             </div>
@@ -280,9 +322,9 @@
            <p class="map__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <picture>
-          <source media="(min-width: 1440px)" srcset="../img/bg-map-desktop@1x.png">
-          <source media="(min-width: 768px)" srcset="../img/bg-map-tablet@1x.png">
-          <img class="map__img" src="../img/bg-map-mobile@1x.png" width="320" height="362" alt="Cat Energy">
+          <source media="(min-width: 1440px)" srcset="../img/bg-map-desktop@1x.png 1x, ../img/bg-map-desktop@2x.png 2x">
+          <source media="(min-width: 768px)" srcset="../img/bg-map-tablet@1x.png 1x, ../img/bg-map-tablet@2x.png 2x">
+          <img class="map__img" src="../img/bg-map-mobile@1x.png" srcset="../img/bg-map-mobile@2x.png 2x" width="320" height="362" alt="На адресс: Санкт-Петербург ул. Большая Конюшенная, д. 19/8">
         </picture>
         <img class="map__pin" src="../img/map-pin.png" width="53" height="45" alt="Маркер на карте">
         </div>
