--- a/source/index.html
+++ b/source/index.html
@@ -65,9 +65,9 @@
            <a class="cover__link" href="form.html">Подобрать программу</a>
           </div>
           <picture>
-            <source media="(min-width: 1440px)" srcset="../img/index-can-desktop@1x.png">
-            <source media="(min-width: 768px)" srcset="../img/index-can-tablet@1x.jpg">
-            <img class="cover__food" src="../img/index-can-mobile@1x.png" width="280" height="275" alt="Образец корма Cat Energy">
+            <source media="(min-width: 1440px)" srcset="../img/index-can-desktop@1x.png 1x, ../img/index-can-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="../img/index-can-tablet@1x.jpg 1x, ../img/index-can-tablet@2x.jpg 2x">
+            <img class="cover__food" src="../img/index-can-mobile@1x.png" srcset="../img/index-can-mobile@2x.png 2x" width="280" height="275" alt="Образец корма Cat Energy">
           </picture>
       </div>
       </section>
@@ -122,9 +122,9 @@
         <div class="example__slider slider">
           <div class="slider__befor">
             <picture>
-              <source media="(min-width: 1440px)" srcset="../img/before-desktop@1x.png">
-              <source media="(min-width: 768px)" srcset="../img/before-tablet@1x.png">
-              <img class="slider__img" src="../img/before-mobile@1x.png" width="320" height="240" alt="Изоражение кота Бориса До">
+              <source media="(min-width: 1440px)" srcset="../img/before-desktop@1x.png 1x, ../img/before-desktop@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="../img/before-tablet@1x.png 1x, ../img/before-tablet@2x.png 2x">
+              <img class="slider__img" src="../img/before-mobile@1x.png" srcset="../img/before-mobile@2x.png 2x" width="320" height="240" alt="Изоражение кота Бориса До">
             </picture>
             <div class="slider__text">
               <p>Было</p>
@@ -137,9 +137,9 @@
           </div>
           <div class="slider__after">
             <picture>
-              <source media="(min-width: 1440px)" srcset="../img/after-desktop@1x.png">
-              <source media="(min-width: 768px)" srcset="../img/after-tablet@1x.png">
-              <img class="slider__img" src="../img/after-mobile@1x.png" width="320" height="240" alt="Изоражение кота Бориса До">
+              <source media="(min-width: 1440px)" srcset="../img/after-desktop@1x.png 1x, ../img/after-desktop@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="../img/after-tablet@1x.png 1x, ../img/after-tablet@2x.png 2x">
+              <img class="slider__img" src="../img/after-mobile@1x.png" srcset="../img/after-mobile@2x.png 2x" width="320" height="240" alt="Изоражение кота Бориса До">
             </picture>
             <button type="button">Назад</button>
             <p>После</p>
@@ -154,9 +154,9 @@
            <p class="map__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <picture>
-          <source media="(min-width: 1440px)" srcset="../img/bg-map-desktop@1x.png">
-          <source media="(min-width: 768px)" srcset="../img/bg-map-tablet@1x.png">
-          <img class="map__img" src="../img/bg-map-mobile@1x.png" width="320" height="362" alt="На адресс: Санкт-Петербург ул. Большая Конюшенная, д. 19/8">
+          <source media="(min-width: 1440px)" srcset="../img/bg-map-desktop@1x.png 1x, ../img/bg-map-desktop@2x.png 2x">
+          <source media="(min-width: 768px)" srcset="../img/bg-map-tablet@1x.png 1x, ../img/bg-map-tablet@2x.png 2x">
+          <img class="map__img" src="../img/bg-map-mobile@1x.png" srcset="../img/bg-map-mobile@2x.png 2x" width="320" height="362" alt="На адресс: Санкт-Петербург ул. Большая Конюшенная, д. 19/8">
         </picture>
         <img class="map__pin" src="../img/map-pin.png" width="53" height="45" alt="Маркер на карте">
         </div>
