Доработка страницы каталога в соответствии с макетом

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -44,22 +44,22 @@
                 </a>
                 <div class="item-catalog__text">
                 <a class="item-catalog__link" href="#">
-                  <h3>Cat Energy Pro 500г</h3>
+                  <h3 class="item-catalog__heading">Cat Energy Pro 500 г</h3>
                 </a>
-                <table class="item-catalog__table">
-                  <tr>
-                    <td>Объем</td>
-                    <td>500 г</td>
-                  </tr>
-                  <tr>
-                    <td>Вкус</td>
-                    <td>Курица</td>
-                  </tr>
-                  <tr>
-                    <td>Цена</td>
-                    <td>700 Р.</td>
-                  </tr>
-                </table>
+                <div class="item-catalog__prace prace">
+                  <div class="prace-line">
+                    <p>Объем</p>
+                    <p>500 г</p>
+                  </div>
+                  <div class="prace-line">
+                    <p>Вкус</p>
+                    <p>Курица</p>
+                  </div>
+                  <div class="prace-line">
+                    <p>Цена</p>
+                    <p>700 Р.</p>
+                  </div>
+                </div>
                 </div>
               </div>
               <a class="item-catalog__link-button">Заказать</a>
@@ -75,22 +75,22 @@
                 </a>
                 <div class="item-catalog__text">
                 <a class="item-catalog__link" href="#">
-                  <h3>Cat Energy Pro 1000г</h3>
+                  <h3 class="item-catalog__heading">Cat Energy Pro 1000 г</h3>
                 </a>
-                <table class="item-catalog__table">
-                  <tr>
-                    <td>Объем</td>
-                    <td>1000 г</td>
-                  </tr>
-                  <tr>
-                    <td>Вкус</td>
-                    <td>Курица</td>
-                  </tr>
-                  <tr>
-                    <td>Цена</td>
-                    <td>1000 Р.</td>
-                  </tr>
-                </table>
+                <div class="item-catalog__prace prace">
+                  <div class="prace-line">
+                    <p>Объем</p>
+                    <p>1000 г</p>
+                  </div>
+                  <div class="prace-line">
+                    <p>Вкус</p>
+                    <p>Курица</p>
+                  </div>
+                  <div class="prace-line">
+                    <p>Цена</p>
+                    <p>1000 Р.</p>
+                  </div>
+                </div>
                 </div>
               </div>
               <a class="item-catalog__link-button">Заказать</a>
@@ -106,22 +106,22 @@
                 </a>
                 <div class="item-catalog__text">
                 <a class="item-catalog__link" href="#">
-                  <h3>Cat Energy Pro 500г</h3>
+                  <h3 class="item-catalog__heading">Cat Energy Pro 500 г</h3>
                 </a>
-                <table class="item-catalog__table">
-                  <tr>
-                    <td>Объем</td>
-                    <td>500 г</td>
-                  </tr>
-                  <tr>
-                    <td>Вкус</td>
-                    <td>Рыба</td>
-                  </tr>
-                  <tr>
-                    <td>Цена</td>
-                    <td>700 Р.</td>
-                  </tr>
-                </table>
+                <div class="item-catalog__prace prace">
+                  <div class="prace-line">
+                    <p>Объем</p>
+                    <p>500 г</p>
+                  </div>
+                  <div class="prace-line">
+                    <p>Вкус</p>
+                    <p>Рыба</p>
+                  </div>
+                  <div class="prace-line">
+                    <p>Цена</p>
+                    <p>700 Р.</p>
+                  </div>
+                </div>
                 </div>
               </div>
               <a class="item-catalog__link-button">Заказать</a>
@@ -137,22 +137,22 @@
                 </a>
                 <div class="item-catalog__text">
                 <a class="item-catalog__link" href="#">
-                  <h3>Cat Energy Pro 1000г</h3>
+                  <h3 class="item-catalog__heading">Cat Energy Pro 1000 г</h3>
                 </a>
-                <table class="item-catalog__table">
-                  <tr>
-                    <td>Объем</td>
-                    <td>1000 г</td>
-                  </tr>
-                  <tr>
-                    <td>Вкус</td>
-                    <td>Рыба</td>
-                  </tr>
-                  <tr>
-                    <td>Цена</td>
-                    <td>1000 Р.</td>
-                  </tr>
-                </table>
+                <div class="item-catalog__prace prace">
+                  <div class="prace-line">
+                    <p>Объем</p>
+                    <p>1000 г</p>
+                  </div>
+                  <div class="prace-line">
+                    <p>Вкус</p>
+                    <p>Рыба</p>
+                  </div>
+                  <div class="prace-line">
+                    <p>Цена</p>
+                    <p>1000 Р.</p>
+                  </div>
+                </div>
                 </div>
               </div>
               <a class="item-catalog__link-button">Заказать</a>
@@ -168,22 +168,22 @@
                 </a>
                 <div class="item-catalog__text">
                 <a class="item-catalog__link" href="#">
-                  <h3>Cat Energy Slim 500г</h3>
+                  <h3 class="item-catalog__heading">Cat Energy Slim 500 г</h3>
                 </a>
-                <table class="item-catalog__table">
-                  <tr>
-                    <td>Объем</td>
-                    <td>500 г</td>
-                  </tr>
-                  <tr>
-                    <td>Вкус</td>
-                    <td>Гречка</td>
-                  </tr>
-                  <tr>
-                    <td>Цена</td>
-                    <td>400 Р.</td>
-                  </tr>
-                </table>
+                <div class="item-catalog__prace prace">
+                  <div class="prace-line">
+                    <p>Объем</p>
+                    <p>500 г</p>
+                  </div>
+                  <div class="prace-line">
+                    <p>Вкус</p>
+                    <p>Греча</p>
+                  </div>
+                  <div class="prace-line">
+                    <p>Цена</p>
+                    <p>400 Р.</p>
+                  </div>
+                </div>
                 </div>
               </div>
               <a class="item-catalog__link-button">Заказать</a>
@@ -199,22 +199,22 @@
                 </a>
                 <div class="item-catalog__text">
                 <a class="item-catalog__link" href="#">
-                  <h3>Cat Energy Slim 1000г</h3>
+                  <h3 class="item-catalog__heading">Cat Energy Slim 1000 г</h3>
                 </a>
-                <table class="item-catalog__table">
-                  <tr>
-                    <td>Объем</td>
-                    <td>1000 г</td>
-                  </tr>
-                  <tr>
-                    <td>Вкус</td>
-                    <td>Гречка</td>
-                  </tr>
-                  <tr>
-                    <td>Цена</td>
-                    <td>700 Р.</td>
-                  </tr>
-                </table>
+                <div class="item-catalog__prace prace">
+                  <div class="prace-line">
+                    <p>Объем</p>
+                    <p>1000 г</p>
+                  </div>
+                  <div class="prace-line">
+                    <p>Вкус</p>
+                    <p>Греча</p>
+                  </div>
+                  <div class="prace-line">
+                    <p>Цена</p>
+                    <p>700 Р.</p>
+                  </div>
+                </div>
                 </div>
               </div>
               <a class="item-catalog__link-button">Заказать</a>
@@ -230,22 +230,22 @@
                 </a>
                 <div class="item-catalog__text">
                 <a class="item-catalog__link" href="#">
-                  <h3>Cat Energy Slim 500г</h3>
+                  <h3 class="item-catalog__heading">Cat Energy Slim 500 г</h3>
                 </a>
-                <table class="item-catalog__table">
-                  <tr>
-                    <td>Объем</td>
-                    <td>500 г</td>
-                  </tr>
-                  <tr>
-                    <td>Вкус</td>
-                    <td>Рис</td>
-                  </tr>
-                  <tr>
-                    <td>Цена</td>
-                    <td>400 Р.</td>
-                  </tr>
-                </table>
+                <div class="item-catalog__prace prace">
+                  <div class="prace-line">
+                    <p>Объем</p>
+                    <p>500 г</p>
+                  </div>
+                  <div class="prace-line">
+                    <p>Вкус</p>
+                    <p>Рис</p>
+                  </div>
+                  <div class="prace-line">
+                    <p>Цена</p>
+                    <p>400 Р.</p>
+                  </div>
+                </div>
                 </div>
               </div>
               <a class="item-catalog__link-button">Заказать</a>
@@ -268,7 +268,7 @@
           <ul class="additional-product__list list-product">
             <li class="list-product__item">
               <div class="list-product__item--p">
-              <p class="list-product__heading">Сахорозаменитель</p>
+              <p class="list-product__heading">Сахарозаменитель</p>
               <p class="list-product__text">1 упаковка (100г) 200 Р.</p>
               </div>
               <a class="list-product__link" href="#">Заказать</a>
