--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,7 @@
     <meta name="format-detection" content="telephone=no">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet"/>
     <link href="css/style.css" rel="stylesheet"/>
+    <script src="../js/picturefill.js"></script>
   </head>
   <body>
     <svg style="display:none">
