Доработка соответствия браузерам

--- a/source/form.html
+++ b/source/form.html
@@ -51,7 +51,7 @@
             <fieldset class="form__owner owner">
               <legend class="form__legend legend__data">Контактные данные (владельца кота)</legend>
               <div class="owner__label">
-              <label>E-mail:*<input type="text" name="emailuser" placeholder="kuklachev@gmail.com" required></label><br>
+              <label class="label-mail">E-mail:*<input type="text" name="emailuser" placeholder="kuklachev@gmail.com" required></label><br>
               <label>Телефон:*<input type="tel" name="teluser" placeholder="8 (960) 900-60-90" required></label>
               </div>
             </fieldset>
@@ -86,7 +86,7 @@
         <picture>
           <source media="(min-width: 1440px)" srcset="../img/bg-map-desktop@1x.png 1x, ../img/bg-map-desktop@2x.png 2x">
           <source media="(min-width: 768px)" srcset="../img/bg-map-tablet@1x.png 1x, ../img/bg-map-tablet@2x.png 2x">
-          <img class="map__img" src="../img/bg-map-mobile@1x.png" srcset="../img/bg-map-mobile@2x.png 2x" width="320" height="362" alt="На адресс: Санкт-Петербург ул. Большая Конюшенная, д. 19/8">
+          <img class="map__img" src="../img/bg-map-mobile@1x.png" srcset="../img/bg-map-mobile@2x.png 2x" width="320" height="362" alt="Наш адресс: Санкт-Петербург ул. Большая Конюшенная, д. 19/8">
         </picture>
         <img class="map__pin" src="../img/map-pin.png" width="53" height="45" alt="Маркер на карте">
         </div>
