--- a/source/catalog.html
+++ b/source/catalog.html
@@ -324,7 +324,7 @@
         <picture>
           <source media="(min-width: 1440px)" srcset="../img/bg-map-desktop@1x.png 1x, ../img/bg-map-desktop@2x.png 2x">
           <source media="(min-width: 768px)" srcset="../img/bg-map-tablet@1x.png 1x, ../img/bg-map-tablet@2x.png 2x">
-          <img class="map__img" src="../img/bg-map-mobile@1x.png" srcset="../img/bg-map-mobile@2x.png 2x" width="320" height="362" alt="На адресс: Санкт-Петербург ул. Большая Конюшенная, д. 19/8">
+          <img class="map__img" src="../img/bg-map-mobile@1x.png" srcset="../img/bg-map-mobile@2x.png 2x" width="320" height="362" alt="Наш адресс: Санкт-Петербург ул. Большая Конюшенная, д. 19/8">
         </picture>
         <img class="map__pin" src="../img/map-pin.png" width="53" height="45" alt="Маркер на карте">
         </div>
