--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
         c-0.5,0-1,0-1.4,0.1l0.2,0.2c0.4,0.5,0.4,1.5,0.4,1.7c0.1,1.3,0,2.9-0.7,3.3c-0.1,0-0.2,0.1-0.4,0.1C7.5,6.5,6.8,5.8,5.6,4
         C5,2.9,4.5,1.8,4.5,1.8s0-0.1-0.1-0.1S4.2,1.6,4.2,1.6H1.3H1.2c0.4,0.9,2.5,5,4.8,7.2c2,1.9,4.3,2,4.7,2h1.4c0,0,0.2,0,0.2-0.1v-0.1
         c0-0.2,0-2,1.2-2.3C13.5,8.3,13.7,8.3,13.7,8.3z" fill="#666666"/></symbol>
-        <symbol viewBox="0 0 23 23" id="icon-ins" >
+      <symbol viewBox="0 0 23 23" id="icon-ins" >
           <g><style type="text/css">
             .st0{fill:#666666;}
           </style>
@@ -35,7 +35,7 @@
           <circle class="st0" cx="12.3" cy="3.7" r="0.9"/>
         </g>
         </symbol>
-        <symbol viewBox="0 0 14 18" id="icon-fb"><path d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18
+        <symbol viewBox="0 0 14 23" id="icon-fb"><path d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18
           h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18
           z" fill="#666666"/></symbol>
     </svg>
@@ -162,11 +162,12 @@
       <div class="page-footer__wrapper">
         <ul class="page-footer__list">
         <li><a href="index.html" class="page-footer__logo-link"><img class="page-footer__logo" src="../img/logo-footer.svg" alt="Логотип компании" width="128" height="24"/></a></li>
-        <li><ul class="page-footer__social list-social">
-          <li><a href="#"><svg class="list-social__vk" width="30" height="16"><use xlink:href="#icon-vk"></use></svg></a></li>
-          <li><a href="#"><svg class="list-social_ins" width="23" height="23"><use xlink:href="#icon-ins"></use></svg></a></li>
-          <li><a href="#"><svg class="list-social__fb" width="14" height="18"><use xlink:href="#icon-fb"></use></svg></a></li>
-          </ul>
+        <li>
+          <ul class="page-footer__social list-social">
+            <li><a href="#"><svg width="40" height="26"><use xlink:href="#icon-vk"></use></svg></a></li>
+            <li><a href="#"><svg width="33" height="33"><use xlink:href="#icon-ins"></use></svg></a></li>
+            <li><a href="#"><svg width="24" height="33"><use xlink:href="#icon-fb"></use></svg></a></li>
+            </ul>
         </li>
         <li><div class="page-footer__copyright copyright">
           <a class="copyright-link" href="">
