Проверка на валидность и исправления

--- a/source/form.html
+++ b/source/form.html
@@ -71,9 +71,9 @@
             </fieldset>
             <fieldset class="form__weight">
               <ul>
-                <li><label class="form__weight-checkbox"><input type="radio" name="catradio" value="losingweight" checked class="visually-hidden"><span class="checkbox-radio"></span>Похудение</label></li><br>
-                <li><label class="form__weight-checkbox"><input type="radio" name="catradio" value="weightgain" class="visually-hidden"><span class="checkbox-radio"></span>Набор массы</label></li><br>
-                <li><label class="form__weight-checkbox"><input type="radio" name="catradio" value="nothing" class="visually-hidden"><span class="checkbox-radio"></span>Не знаю (нужен ваш совет)</label></li>
+                <li class="form__weight-li"><label class="form__weight-checkbox"><input type="radio" name="catradio" value="losingweight" checked class="visually-hidden"><span class="checkbox-radio"></span>Похудение</label></li>
+                <li class="form__weight-li"><label class="form__weight-checkbox"><input type="radio" name="catradio" value="weightgain" class="visually-hidden"><span class="checkbox-radio"></span>Набор массы</label></li>
+                <li class="form__weight-li"><label class="form__weight-checkbox"><input type="radio" name="catradio" value="nothing" class="visually-hidden"><span class="checkbox-radio"></span>Не знаю (нужен ваш совет)</label></li>
               </ul>
             </fieldset>
             </div>
@@ -121,7 +121,7 @@
         </div>
       </section>
     </main>
-    <foooter class="page-footer">
+    <footer class="page-footer">
       <div class="page-footer__wrapper">
         <ul class="page-footer__list">
           <li><a href="index.html" class="page-footer__logo-link"><img class="page-footer__logo" src="../img/logo-footer.svg" alt="Логотип компании" width="128" height="24"/></a></li>
@@ -145,7 +145,7 @@
         </li>
         </ul>
       </div>
-    </foooter>
+    </footer>
     <script src="../js/menu.js"></script>
   </body>
 </html>
