--- a/source/catalog.html
+++ b/source/catalog.html
@@ -22,7 +22,8 @@
         c-1.4,2.1-2,2.4-2.5,2.4c-0.1,0-0.3,0-0.4-0.1c-0.7-0.4-0.7-1.4-0.7-2.1V3.9V2.6c0.1-1.3,0-1.3-0.3-1.4c-0.3-0.1-0.5-0.1-1.4-0.1H10
         c-0.5,0-1,0-1.4,0.1l0.2,0.2c0.4,0.5,0.4,1.5,0.4,1.7c0.1,1.3,0,2.9-0.7,3.3c-0.1,0-0.2,0.1-0.4,0.1C7.5,6.5,6.8,5.8,5.6,4
         C5,2.9,4.5,1.8,4.5,1.8s0-0.1-0.1-0.1S4.2,1.6,4.2,1.6H1.3H1.2c0.4,0.9,2.5,5,4.8,7.2c2,1.9,4.3,2,4.7,2h1.4c0,0,0.2,0,0.2-0.1v-0.1
-        c0-0.2,0-2,1.2-2.3C13.5,8.3,13.7,8.3,13.7,8.3z" fill="#666666"/></symbol>
+        c0-0.2,0-2,1.2-2.3C13.5,8.3,13.7,8.3,13.7,8.3z" fill="#666666"/>
+      </symbol>
       <symbol viewBox="0 0 23 23" id="icon-ins" >
           <g><style type="text/css">
             .st0{fill:#666666;}
@@ -33,10 +34,20 @@
             s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9z"/>
           <circle class="st0" cx="12.3" cy="3.7" r="0.9"/>
         </g>
-        </symbol>
-        <symbol viewBox="0 0 14 23" id="icon-fb"><path d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18
+      </symbol>
+      <symbol viewBox="0 0 14 23" id="icon-fb"><path d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18
           h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18
-          z" fill="#666666"/></symbol>
+          z" fill="#666666"/>
+      </symbol>
+      <symbol viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" id="icon-plus">
+        <style type="text/css">
+          .st0 {
+            fill: #ededed;
+          }
+        </style>
+        <polygon class="st0" points="60,29.5 30.5,29.5 30.5,0 29.5,0 29.5,29.5 0,29.5 0,30.5 29.5,30.5 29.5,60 30.5,60 30.5,30.5
+        60,30.5 "/>
+      </symbol>
     </svg>
     <header class="page-header nav--opened">
       <div class="page-header__wrapper nav--nojs">
@@ -281,7 +292,7 @@
             </li>
             <li class="catalog-list__item item-catalog">
               <div class="catalog-product">
-                <div class="catalog-product__plus"></div>
+                <svg class="catalog-product__plus" width="60" height="60"><use xlink:href="#icon-plus"></use></svg>
                 <h3 class="catalog-product__heading">Показать еще 100500 товаров</h3>
                 <p class="catalog-product__text">На самом деле вкусов гораздо больше!</p>
                 <a class="catalog-product__link" href="#">Показать все</a>
@@ -359,7 +370,7 @@
         </div>
       </section>
     </main>
-    <foooter class="page-footer">
+    <footer class="page-footer">
       <div class="page-footer__wrapper">
         <ul class="page-footer__list">
           <li><a href="index.html" class="page-footer__logo-link"><img class="page-footer__logo" src="../img/logo-footer.svg" alt="Логотип компании" width="128" height="24"/></a></li>
@@ -383,6 +394,6 @@
         </li>
         </ul>
       </div>
-    </foooter>
+    </footer>
   </body>
 </html>
