--- a/source/index.html
+++ b/source/index.html
@@ -158,7 +158,7 @@
         </div>
       </section>
     </main>
-    <foooter class="page-footer">
+    <footer class="page-footer">
       <div class="page-footer__wrapper">
         <ul class="page-footer__list">
         <li><a href="index.html" class="page-footer__logo-link"><img class="page-footer__logo" src="../img/logo-footer.svg" alt="Логотип компании" width="128" height="24"/></a></li>
@@ -184,6 +184,6 @@
         </li>
         </ul>
       </div>
-    </foooter>
+    </footer>
   </body>
 </html>
