Исправление после 1ой проверки: Б5 Б13

--- a/source/form.html
+++ b/source/form.html
@@ -5,7 +5,6 @@
     <title>HTML Academy: Кэт энерджи</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet"/>
     <link href="css/style.css" rel="stylesheet"/>
   </head>
   <body>
@@ -65,8 +64,8 @@
           <form class="profile__form form" action="https://echo.htmlacademy.ru/courses" method="post">
             <div class="form__fieldset-info">
             <fieldset class="form__info-cat info-cat">
-              <label class="info-cat__name">Имя:*<input type="text" name="catname" placeholder="Барсик" required></label><br>
-              <label class="info-cat__weight">Вес (кг):*<input type="number" name="catweight" placeholder="7" required></label><br>
+              <label class="info-cat__name">Имя:*<input type="text" name="catname" placeholder="Барсик" required></label>
+              <label class="info-cat__weight">Вес (кг):*<input type="number" name="catweight" placeholder="7" required></label>
               <label class="info-cat__age">Возраст (лет):<input type="number" name="catage" placeholder="7"></label>
             </fieldset>
             <fieldset class="form__weight">
@@ -80,7 +79,7 @@
             <fieldset class="form__owner owner">
               <legend class="form__legend legend__data">Контактные данные (владельца кота)</legend>
               <div class="owner__label">
-              <label class="label-mail">E-mail:*<input type="text" name="emailuser" placeholder="kuklachev@gmail.com" required></label><br>
+              <label class="label-mail">E-mail:*<input type="text" name="emailuser" placeholder="kuklachev@gmail.com" required></label>
               <label>Телефон:*<input type="tel" name="teluser" placeholder="8 (960) 900-60-90" required></label>
               </div>
             </fieldset>
@@ -93,9 +92,9 @@
             <fieldset class="form__additional">
               <legend class="form__legend legend__add">Дополнительно</legend>
               <ul class="form__additional__list-check">
-                  <li><label class="form__additional-checkbox"><input type="checkbox" class="visually-hidden" name="sweetener" checked><span class="checkbox-indicator"></span>Сахарозаменитель</label><br></li>
-                  <li><label class="form__additional-checkbox"><input type="checkbox" class="visually-hidden" name="Water"><span class="checkbox-indicator"></span>Питьевая вода</label><br></li>
-                  <li><label class="form__additional-checkbox"><input type="checkbox" class="visually-hidden" name="Milk"><span class="checkbox-indicator"></span>Молоко</label><br></li>
+                  <li><label class="form__additional-checkbox"><input type="checkbox" class="visually-hidden" name="sweetener" checked><span class="checkbox-indicator"></span>Сахарозаменитель</label></li>
+                  <li><label class="form__additional-checkbox"><input type="checkbox" class="visually-hidden" name="Water"><span class="checkbox-indicator"></span>Питьевая вода</label></li>
+                  <li><label class="form__additional-checkbox"><input type="checkbox" class="visually-hidden" name="Milk"><span class="checkbox-indicator"></span>Молоко</label></li>
                   <li><label class="form__additional-checkbox"><input type="checkbox" class="visually-hidden" name="Vitamins"><span class="checkbox-indicator"></span>Витамины</label></li>
               </ul>
             </fieldset>
@@ -133,6 +132,7 @@
             </ul>
         </li>
         <li><div class="page-footer__copyright copyright">
+          <a class="copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
           <p class="copyright_text">HTML Academy</p>
           <svg class="copyright__logo" width="40" height="40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60">
             <path fill="#666666" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17
@@ -141,6 +141,7 @@
             3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2
             1.8v13.6z"/>
           </svg>
+          </a>
         </div>
         </li>
         </ul>
