--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,7 +5,6 @@
     <title>HTML Academy: Кэт энерджи</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet"/>
     <link href="css/style.css" rel="stylesheet"/>
   </head>
   <body>
@@ -382,6 +381,7 @@
             </ul>
         </li>
         <li><div class="page-footer__copyright copyright">
+          <a class="copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
           <p class="copyright_text">HTML Academy</p>
           <svg class="copyright__logo" width="40" height="40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60">
             <path fill="#666666" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17
@@ -390,6 +390,7 @@
             3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2
             1.8v13.6z"/>
           </svg>
+          </a>
         </div>
         </li>
         </ul>
