--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,6 @@
     <title>HTML Academy: Кэт энерджи</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet"/>
     <link href="css/style.css" rel="stylesheet"/>
     <script src="../js/picturefill.js"></script>
   </head>
@@ -39,9 +38,9 @@
           h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18
           z" fill="#666666"/></symbol>
     </svg>
-    <header class="page-header nav--opened">
-      <div class="page-header__wrapper nav--nojs">
-        <div class="page-header__nav nav">
+    <header class="page-header">
+      <div class="page-header__wrapper nav nav--opened nav--nojs">
+        <div class="page-header__menu">
           <picture>
             <source media="(min-width: 1440px)" srcset="../img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="../img/logo-tablet.svg">
@@ -149,12 +148,14 @@
            <h2>Приглашаем<br>к сотрудничеству дилеров!</h2>
            <p class="map__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
+        <div class="map__block2">
         <picture>
           <source media="(min-width: 1440px)" srcset="../img/bg-map-desktop@1x.png 1x, ../img/bg-map-desktop@2x.png 2x">
           <source media="(min-width: 768px)" srcset="../img/bg-map-tablet@1x.png 1x, ../img/bg-map-tablet@2x.png 2x">
           <img class="map__img" src="../img/bg-map-mobile@1x.png" srcset="../img/bg-map-mobile@2x.png 2x" width="320" height="362" alt="Наш адресс: Санкт-Петербург ул. Большая Конюшенная, д. 19/8">
         </picture>
         <img class="map__pin" src="../img/map-pin.png" width="53" height="45" alt="Маркер на карте">
+        </div>
         </div>
       </section>
     </main>
@@ -170,7 +171,7 @@
             </ul>
         </li>
         <li><div class="page-footer__copyright copyright">
-          <a class="copyright-link" href="">
+          <a class="copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
           <p class="copyright_text">HTML Academy</p>
           <svg class="copyright__logo" width="40" height="40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60">
             <path d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17
