--- a/source/index.html
+++ b/source/index.html
@@ -41,15 +41,17 @@
     <header class="page-header">
       <div class="page-header__wrapper nav nav--opened nav--nojs">
         <div class="page-header__menu">
+          <a href="">
           <picture>
             <source media="(min-width: 1440px)" srcset="../img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="../img/logo-tablet.svg">
-            <img class="nav__logo" src="../img/logo-mobile.svg" width="190" height="40" alt="Cat Energy">
+            <img class="nav__logo logo-header" src="../img/logo-mobile.svg" width="190" height="40" alt="Cat Energy">
           </picture>
-          <button type="button" class="nav__button">Меню</button>
+          </a>
+          <button type="button" class="nav__button button-header">Меню</button>
         </div>
-        <ul class="page-header__list list-menu">
-          <li class="list-menu__item"><a class="list-menu__link link-off list-menu__item--activ" href="#">Главная</a></li>
+        <ul class="page-header__list list-menu list-menu--white">
+          <li class="list-menu__item"><a class="list-menu__link list-menu__link--activ" href="#">Главная</a></li>
           <li class="list-menu__item"><a class="list-menu__link" href="catalog.html">Каталог продукции</a></li>
          <li class="list-menu__item"><a class="list-menu__link" href="form.html">Подбор программы</a></li>
         </ul>
@@ -73,7 +75,7 @@
       </section>
       <section class="program">
           <h2 class="visually-hidden">Виды программ</h2>
-          <div class="program__weight weight">
+          <div class="program__weight block-weight">
             <div class="weight__wrapper">
             <h3 class="weight__slim">Похудение</h3>
             <p class="weight__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
@@ -162,7 +164,7 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <ul class="page-footer__list">
-        <li><a href="index.html" class="page-footer__logo-link"><img class="page-footer__logo" src="../img/logo-footer.svg" alt="Логотип компании" width="128" height="24"/></a></li>
+        <li><a href="index.html" class="page-footer__logo-link"><img class="page-footer__logo logo-footer" src="../img/logo-footer.svg" alt="Логотип компании" width="128" height="24"/></a></li>
         <li>
           <ul class="page-footer__social list-social">
             <li><a href="#"><svg width="40" height="26"><use xlink:href="#icon-vk"></use></svg></a></li>
