--- a/source/form.html
+++ b/source/form.html
@@ -21,10 +21,10 @@
         c-1.4,2.1-2,2.4-2.5,2.4c-0.1,0-0.3,0-0.4-0.1c-0.7-0.4-0.7-1.4-0.7-2.1V3.9V2.6c0.1-1.3,0-1.3-0.3-1.4c-0.3-0.1-0.5-0.1-1.4-0.1H10
         c-0.5,0-1,0-1.4,0.1l0.2,0.2c0.4,0.5,0.4,1.5,0.4,1.7c0.1,1.3,0,2.9-0.7,3.3c-0.1,0-0.2,0.1-0.4,0.1C7.5,6.5,6.8,5.8,5.6,4
         C5,2.9,4.5,1.8,4.5,1.8s0-0.1-0.1-0.1S4.2,1.6,4.2,1.6H1.3H1.2c0.4,0.9,2.5,5,4.8,7.2c2,1.9,4.3,2,4.7,2h1.4c0,0,0.2,0,0.2-0.1v-0.1
-        c0-0.2,0-2,1.2-2.3C13.5,8.3,13.7,8.3,13.7,8.3z" fill="#inherit"/></symbol>
+        c0-0.2,0-2,1.2-2.3C13.5,8.3,13.7,8.3,13.7,8.3z" fill="inherit"/></symbol>
       <symbol viewBox="0 0 23 23" id="icon-ins" >
           <g><style type="text/css">
-            .st0{fill:#inherit;}
+            .st0{fill:inherit;}
           </style>
           <path class="st0" d="M11.8,1C13.6,1,15,2.4,15,4.2v7.7c0,1.7-1.4,3.1-3.1,3.1H4.2C2.4,15,1,13.6,1,11.8V4.2C1,2.4,2.4,1,4.2,1H11.8
              M11.8,0H4.2C1.9,0,0,1.9,0,4.2v7.7C0,14.1,1.9,16,4.2,16h7.7c2.3,0,4.2-1.9,4.2-4.2V4.2C16,1.9,14.1,0,11.8,0z"/>
@@ -35,7 +35,7 @@
         </symbol>
         <symbol viewBox="0 0 14 23" id="icon-fb"><path d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18
           h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18
-          z" fill="#inherit"/></symbol>
+          z" fill="inherit"/></symbol>
     </svg>
     <header class="page-header">
       <div class="page-header__wrapper nav nav--opened nav--nojs">
@@ -70,9 +70,9 @@
             </fieldset>
             <fieldset class="form__weight weight-list">
               <ul>
-                <li class="form__weight-li"><label class="form__weight-checkbox"><input type="radio" name="catradio" value="losingweight" checked class="visually-hidden"><span class="checkbox-radio"></span>Похудение</label></li>
-                <li class="form__weight-li"><label class="form__weight-checkbox"><input type="radio" name="catradio" value="weightgain" class="visually-hidden"><span class="checkbox-radio"></span>Набор массы</label></li>
-                <li class="form__weight-li"><label class="form__weight-checkbox"><input type="radio" name="catradio" value="nothing" class="visually-hidden"><span class="checkbox-radio"></span>Не знаю (нужен ваш совет)</label></li>
+                <li class="form__weight-li"><label class="weight-list-checkbox"><input type="radio" name="catradio" value="losingweight" checked class="visually-hidden"><span class="checkbox-radio"></span>Похудение</label></li>
+                <li class="form__weight-li"><label class="weight-list-checkbox"><input type="radio" name="catradio" value="weightgain" class="visually-hidden"><span class="checkbox-radio"></span>Набор массы</label></li>
+                <li class="form__weight-li"><label class="weight-list-checkbox"><input type="radio" name="catradio" value="nothing" class="visually-hidden"><span class="checkbox-radio"></span>Не знаю (нужен ваш совет)</label></li>
               </ul>
             </fieldset>
             </div>
@@ -91,11 +91,11 @@
             </fieldset>
             <fieldset class="form__additional additional">
               <legend class="form__legend legend__add">Дополнительно</legend>
-              <ul class="form__additional__list-check">
-                  <li><label class="form__additional-checkbox"><input type="checkbox" class="visually-hidden" name="sweetener" checked><span class="checkbox-indicator"></span>Сахарозаменитель</label></li>
-                  <li><label class="form__additional-checkbox"><input type="checkbox" class="visually-hidden" name="Water"><span class="checkbox-indicator"></span>Питьевая вода</label></li>
-                  <li><label class="form__additional-checkbox"><input type="checkbox" class="visually-hidden" name="Milk"><span class="checkbox-indicator"></span>Молоко</label></li>
-                  <li><label class="form__additional-checkbox"><input type="checkbox" class="visually-hidden" name="Vitamins"><span class="checkbox-indicator"></span>Витамины</label></li>
+              <ul class="additional__list-check">
+                  <li><label class="additional-checkbox"><input type="checkbox" class="visually-hidden" name="sweetener" checked><span class="checkbox-indicator"></span>Сахарозаменитель</label></li>
+                  <li><label class="additional-checkbox"><input type="checkbox" class="visually-hidden" name="Water"><span class="checkbox-indicator"></span>Питьевая вода</label></li>
+                  <li><label class="additional-checkbox"><input type="checkbox" class="visually-hidden" name="Milk"><span class="checkbox-indicator"></span>Молоко</label></li>
+                  <li><label class="additional-checkbox"><input type="checkbox" class="visually-hidden" name="Vitamins"><span class="checkbox-indicator"></span>Витамины</label></li>
               </ul>
             </fieldset>
             <div class="form__button-text">
@@ -107,9 +107,9 @@
       </section>
       <section class="map">
         <div class="map__wrapper">
-        <div class="map__block  block--grey">
+        <div class="map__block  map__block--grey">
            <h2>Приглашаем<br>к сотрудничеству дилеров!</h2>
-           <p class="map__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+           <div class="map__text"><p>ул. Большая Конюшенная, д. 19/8</p><p>Санкт-Петербург</p></div>
         </div>
         <iframe class="interactiv-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253002735!2d30.320858715590237!3d59.938719169054785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1584732646170!5m2!1sru!2sru"
                 width="320" height="362" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
@@ -128,9 +128,9 @@
           <li><a href="index.html" class="page-footer__logo-link"><img class="page-footer__logo logo-footer" src="../img/logo-footer.svg" alt="Логотип компании" width="128" height="24"/></a></li>
         <li>
           <ul class="page-footer__social list-social">
-            <li><a href="#"><svg width="40" height="26"><use xlink:href="#icon-vk"></use></svg></a></li>
-            <li><a href="#"><svg width="33" height="33"><use xlink:href="#icon-ins"></use></svg></a></li>
-            <li><a href="#"><svg width="24" height="33"><use xlink:href="#icon-fb"></use></svg></a></li>
+            <li><a href="#"><svg class="icon-vk" width="40" height="26"><use xlink:href="#icon-vk"></use></svg></a></li>
+            <li><a href="#"><svg class="icon-ins" width="33" height="33"><use xlink:href="#icon-ins"></use></svg></a></li>
+            <li><a href="#"><svg class="icon-fb" width="24" height="33"><use xlink:href="#icon-fb"></use></svg></a></li>
             </ul>
         </li>
         <li><div class="page-footer__copyright copyright">
