--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,7 @@
         c0-0.2,0-2,1.2-2.3C13.5,8.3,13.7,8.3,13.7,8.3z" fill="inherit"/></symbol>
       <symbol viewBox="0 0 23 23" id="icon-ins" >
           <g><style type="text/css">
-            .st0{fill:#inherit;}
+            .st0{fill: inherit;}
           </style>
           <path class="st0" d="M11.8,1C13.6,1,15,2.4,15,4.2v7.7c0,1.7-1.4,3.1-3.1,3.1H4.2C2.4,15,1,13.6,1,11.8V4.2C1,2.4,2.4,1,4.2,1H11.8
              M11.8,0H4.2C1.9,0,0,1.9,0,4.2v7.7C0,14.1,1.9,16,4.2,16h7.7c2.3,0,4.2-1.9,4.2-4.2V4.2C16,1.9,14.1,0,11.8,0z"/>
@@ -36,7 +36,7 @@
         </symbol>
         <symbol viewBox="0 0 14 23" id="icon-fb"><path d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18
           h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18
-          z" fill="#inherit"/></symbol>
+          z" fill="inherit"/></symbol>
     </svg>
     <header class="page-header">
       <div class="page-header__wrapper nav nav--opened nav--nojs">
@@ -95,10 +95,10 @@
         <div class="advantages__wrapper">
           <h2>Как это работает</h2>
           <ul class="advantages__list list-page">
-            <li class="list-page__item item--leaf"><div class="item--namber">1</div>Функциональное питание содержит только полезные питательные вещества.</li>
-            <li class="list-page__item item--powder"><div class="item--namber">2</div>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
-            <li class="list-page__item item--dining"><div class="item--namber">3</div>Замените один-два приема обычной еды на наше функциональное питание.</li>
-            <li class="list-page__item item--clock"><div class="item--namber">4</div>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+            <li class="list-page__item item-leaf"><div class="item-namber">1</div>Функциональное питание содержит только полезные питательные вещества.</li>
+            <li class="list-page__item item-powder"><div class="item-namber">2</div>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+            <li class="list-page__item item-dining"><div class="item-namber">3</div>Замените один-два приема обычной еды на наше функциональное питание.</li>
+            <li class="list-page__item item-clock"><div class="item-namber">4</div>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
           </ul>
         </div>
       </section>
@@ -118,7 +118,7 @@
             <p class="block__content">затрачено времени</p>
           </div>
         </div>
-          <p class="example__text">Затраты на питание: 15 000 руб.</p>
+          <div class="example__text"><p>Затраты на питание:</p><p>15 000 руб.</p></div>
           </div>
           </div>
         <div class="example__slider slider">
@@ -149,7 +149,7 @@
         <div class="map__wrapper">
         <div class="map__block">
            <h2>Приглашаем<br>к сотрудничеству дилеров!</h2>
-           <p class="map__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+           <div class="map__text"><p>ул. Большая Конюшенная, д. 19/8</p><p>Санкт-Петербург</p></div>
         </div>
         <div class="map__block2">
         <iframe class="interactiv-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253002735!2d30.320858715590237!3d59.938719169054785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1584732646170!5m2!1sru!2sru"
@@ -170,9 +170,9 @@
         <li><a href="index.html" class="page-footer__logo-link"><img class="page-footer__logo logo-footer" src="../img/logo-footer.svg" alt="Логотип компании" width="128" height="24"/></a></li>
         <li>
           <ul class="page-footer__social list-social">
-            <li><a href="#"><svg width="40" height="26"><use xlink:href="#icon-vk"></use></svg></a></li>
-            <li><a href="#"><svg width="33" height="33"><use xlink:href="#icon-ins"></use></svg></a></li>
-            <li><a href="#"><svg width="24" height="33"><use xlink:href="#icon-fb"></use></svg></a></li>
+            <li><a href="#"><svg class="icon-vk" width="40" height="26"><use xlink:href="#icon-vk"></use></svg></a></li>
+            <li><a href="#"><svg class="icon-ins" width="33" height="33"><use xlink:href="#icon-ins"></use></svg></a></li>
+            <li><a href="#"><svg class="icon-fb" width="24" height="33"><use xlink:href="#icon-fb"></use></svg></a></li>
             </ul>
         </li>
         <li><div class="page-footer__copyright copyright">
